--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<app-header (section) = "onNavigate($event)"></app-header>
+<app-header ></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-     
-      <app-recipes *ngIf="loadedSection == 'receipe'"></app-recipes>
-      <app-shopping-list *ngIf="loadedSection == 'not receipe'"></app-shopping-list>
+
+      <router-outlet></router-outlet>
+      
+      <!-- <app-recipes *ngIf="loadedSection == 'receipe'"></app-recipes>
+      <app-shopping-list *ngIf="loadedSection == 'not receipe'"></app-shopping-list> -->
 
           <!-- <app-oddevencompo></app-oddevencompo>
           <br />
