--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
         
         <div class="collapse navbar-collapse" >
           <ul class=" nav navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#" (click)="showSection('receipe')">Recipes <span class="sr-only">(current)</span></a>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="/recipes">Recipes <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" (click)="showSection('not receipe')">Shopping List</a>
+            <li class="nav-item" routerLinkActive="active"> 
+              <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
             </li>
          
           </ul>
