--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,6 @@
 <a
-href="#"
-class="list-group-item clearfix"
-(click)="OnSelect();"
+class="list-group-item clearfix"  routerLinkActive="active"
+[routerLink]="[Index]"
 >
 <div class="pull-left">
   <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
