--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-success">New Recipe</button>
+      <button class="btn btn-success" [routerLink]="['new']">New Recipe</button>
     </div>
   </div>
   <hr>
   <div class="row">
     <div class="col-xs-12">
      
-      <app-recipe-item [recipe]="recipeEl" *ngFor="let recipeEl of recipes"></app-recipe-item>
+      <app-recipe-item [recipe]="recipeEl"  *ngFor="let recipeEl of recipes; let i = index" [Index]="i"></app-recipe-item>
     </div>
   </div>
   
