--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
         <ul class="dropdown-menu">
           <li><a  (click)="AddtoShoppingList(receipeItem);">To Shopping List</a></li>
           <li><a  [routerLink]="['edit']" >Edit Recipe</a></li>
-          <li><a>Delete Recipe</a></li>
+          <li><a (click)="onDeleteRecipe(id)"> Delete Recipe</a></li>
         </ul>
       </div>
     </div>
