--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -14,7 +14,7 @@
             ngModel
             class="form-control">
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!f.valid" *ngIf="!isLoggedIn">Log in</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!f.valid" >Log in</button>
        
         <br/><br/>
        
