--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -17,14 +17,14 @@
         <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
         <br/><br/>
        
-        <div class="row"  *ngIf="wasSignupSuccessful">
-            <div class="col-xs-12">
+        <!-- <div class="row"  *ngIf="wasSignupSuccessful">
+          <div class="col-xs-12">
               <p class="alert alert-success">
                   <strong>Registration Success!</strong> Please click <a routerLink="/login">here</a> to login!.
                  
               </p>
-            </div>
-          </div>
+            </div> 
+          </div> -->
       </form>
      
     </div>
