--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-xs-12">
      
-      <app-recipe-item [recipe]="recipeEl"  *ngFor="let recipeEl of recipes; let i = index" [Index]="i"></app-recipe-item>
+      <app-recipe-item [recipe]="recipeEl"  *ngFor="let recipeEl of (recipeState | async).recipes; let i = index" [Index]="i"></app-recipe-item>
     </div>
   </div>
   
